--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "intl": "1.2.5",
     "ionicons": "2.0.1",
     "leaflet": "1.2.0",
+    "moment": "^2.21.0",
     "nebular-icons": "1.0.6",
     "ng2-ckeditor": "1.1.13",
     "ng2-smart-table": "1.2.2",
